welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:79: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:85: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:95: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:105: error: not found: value dogHouse
		dogHouse();		
                ^