welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code







































def DogHouse()
{
baisseBrosse()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
avance()
gauche()
leveBrosse()
}
DogHouse()
avance()
avance()
avance()
avance()
DogHouse()
avance()
avance()
avance()
avance()
DogHouse()
avance()
avance()
avance()
avance()
DogHouse()